--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
   <body>
     <div class="container">
       <h1>Image Generator</h1>
-      <button class="btn btn-primary">Generate Image</button>
-      <div class="flex-box-container"></div>
+      <button class="btn btn-primary" onclick="generate()">
+        Generate Image
+      </button>
+      <div class="flex-box-container" id="frame"></div>
     </div>
   </body>
+  <script src="/app.js"></script>
 </html>
